# Preciscan

./: .gitignore  AI_README.md  README.md
.github/workflows/: ci.yml
docs/: .gitignore  dev_setup.md  mcu_fsm.md  pc_thread_model.md  run_logging.md
pc/: CMakeLists.txt
pc/app/: main_ui.cpp
pc/app/controller/: ScanController.cpp  ScanController.hpp
pc/app/ui/: MainWindow.cpp  MainWindow.hpp
pc/app/ui/panels/: DiagnosticsPanel.cpp  DiagnosticsPanel.hpp  LayerItemWidget.cpp  LayerItemWidget.hpp  ScanPanel.cpp  ScanPanel.hpp  SetupPanel.cpp  SetupPanel.hpp
pc/app/ui/state/: AppState.hpp  AppStateMachine.cpp  AppStateMachine.hpp
pc/app/ui/widgets/: ConnectingOverlay.cpp  ConnectingOverlay.hpp  ExposureControl.cpp  ExposureControl.hpp  InfoTipButton.cpp  InfoTipButton.hpp  ProfileWidget.cpp  ProfileWidget.hpp  SpeedControl.cpp  SpeedControl.hpp  VisualizerWidget.cpp  VisualizerWidget.hpp
pc/core/: cli_args.h  config.cpp  config.h  i_data_sink.h  meta_writer.cpp  meta_writer.h  metrics_writer.cpp  metrics_writer.h  packet.h  packet_queue.h  packet_v2.h  seq_metrics.cpp  seq_metrics.h  spsc_ring_buffer.h
pc/hardware/: laser_manager.cpp  laser_manager.h
pc/io/: disk_writer.cpp  disk_writer.h  ply_writer.cpp  ply_writer.h  replay_reader.cpp  replay_reader.h  stl_loader.cpp  stl_loader.h
pc/net/: mcu_listener.cpp  mcu_listener.h  packet_queue.h  ring_buffer_sink.h  spsc_ring_buffer.h  udp_receiver.cpp  udp_receiver.h  udp_recorder.cpp  udp_recorder.h  udp_socket.h
pc/pc/tools/udp_sender_sim/: main.cpp
pc/sim/: laser_sim_worker.cpp  laser_sim_worker.h  mesh_slicer.cpp  mesh_slicer.h
pc/tests/: CMakeLists.txt  test_seq_tracker.cpp
pc/tools/acquire_cli/: main.cpp
pc/tools/udp_sender_sim/: main.cpp
protocol/docs/: framing.md  uart.md  udp.md
protocol/schema/: commands.proto
tools/packet_replay/: README.md
